--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -11,10 +11,24 @@
         <h1>Cyber Advice</h1>
     </header>
     <main>
-        <div class="main">
+        <div class="main1">
             <h2>
-                <span class="mobile-header-span">Cyber Advice</span> - сайт з порадами та навчальним курсом по безпечному перебуванні в інтернеті.
+                <span class="main-span1">Cyber Advice</span> - сайт з порадами та навчальним курсом по безпечному перебуванні в інтернеті.
             </h2>
+        </div>
+        <div class="main2">
+            <h2>
+                <span class="main-span2">Навчальний курс</span>
+            </h2>
+            <p>На цьому сайті ви можете пройти навчальний курс по кібер-безпеці та кібер гігієні</p>
+            <button>Перейти до курсу</button>
+        </div>
+        <div class="main3">
+            <h2>
+                <span class="main-span3">Новини індустрії</span>
+            </h2>
+            <p>Також перегляньте новини кібербезпеки та нові загрози від яких варто захиститись</p>
+            <button>Переглянути новини</button>
         </div>
     </main>
 </body>
