--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -9,7 +9,27 @@
 <body>
     <header class="mobile-header">
         <h1>Cyber Advice</h1>
+        <div class="burger-menu" id="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </header>
+        <nav class="side-menu" id="sideMenu">
+            <a href="#">Часті запитання (FAQ)</a>
+            <hr>
+            <a href="#">Політика</a>
+            <hr>
+            <a href="#">Послуги</a>
+            <hr>
+            <a href="#">Контакти</a>
+            <hr>
+            <a href="#">Про нас</a>
+            <hr>
+            <a href="#">Новини індустрії</a>
+            <hr>
+            <a href="#">Повідомити про помилку</a>
+        </nav>
     <main>
         <div class="main1">
             <h2>
@@ -31,5 +51,6 @@
             <button>Переглянути новини</button>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
